added icons and ftp access

--- a/src/ImageImport/ImageImport/Licences/licence.html
+++ b/src/ImageImport/ImageImport/Licences/licence.html
@@ -2,16 +2,21 @@
 <head>
     <style>
         th {
-            text-align:left
+            text-align: left;
+            padding: 5px
         }
         body {
             font-family: 'Microsoft Sans Serif'
+        }
+        td
+        {
+            padding: 5px
         }
         tr.odd {
             background-color: lightgrey
         }
         tr.even {
-            background-color: lightblue
+            background-color: lightsteelblue
         }
 
     </style>
@@ -29,7 +34,7 @@
                 <th>Source</th>
             </tr>
         </thead>
-        <tbody>           
+        <tbody>
             <tr class="even">
                 <td>WebView2</td>
                 <td>Microsoft</td>
@@ -57,12 +62,19 @@
             <tr class="even">
                 <td>MetadataExtractor</td>
                 <td><a href="https://www.nuget.org/profiles/drewnoakes">drewnoakes</a></td>
-                <td><a href="https://licenses.nuget.org/Apache-2.0" target="_blank">MIT</a>Apache 2.0</td>
+                <td><a href="https://licenses.nuget.org/Apache-2.0" target="_blank">Apache 2.0</a></td>
                 <td><a href="https://www.nuget.org/packages/MetadataExtractor" target="_blank">NuGet</a></td>
             </tr>
+            <tr class="odd">
+                <td>FluentFTP</td>
+                <td><a href="https://github.com/robinrodricks">Robin Rodricks</a></td>
+                <td><a href="https://www.nuget.org/packages/FluentFTP/42.1.0/license" target="_blank">Licence</a></td>
+                <td><a href="https://www.nuget.org/packages/FluentFTP" target="_blank">NuGet</a></td>
+            </tr>
+
         </tbody>
     </table>
     <h1>Ressources</h1>
-    <p>Icons by <a href="https://freeicons.io/profile/714">Raj Dev</a> on <a href="https://freeicons.io">freeicons.io</a></p>
+    <p>Icons by <a href="https://freeicons.io/profile/714" target="_blank">Raj Dev</a> on <a href="https://freeicons.io" target="_blank">freeicons.io</a></p>
 </body>
 </html>
