sorting elements on load

--- a/src/ImageImport/Licences/licence.html
+++ b/src/ImageImport/Licences/licence.html
@@ -37,7 +37,7 @@
         <tbody>
             <tr class="even">
                 <td>WebView2</td>
-                <td>Microsoft</td>
+                <td><a href="https:www.microsoft.com" target="_blank">Microsoft</a></td>
                 <td><a href="https://www.nuget.org/packages/Microsoft.Web.WebView2/1.0.1418.22/License" target="_blank">Licence</a></td>
                 <td><a href="https://www.nuget.org/packages/Microsoft.Web.WebView2" target="_blank">NuGet</a></td>
             </tr>
